# joinlegends

joinlegends-backend/: .gitignore  docker-compose.yml  go.mod  go.sum
joinlegends-backend/api-doc/: index.html
joinlegends-backend/cmd/server/: main.go
joinlegends-backend/docs/api/: README.md
joinlegends-backend/internal/domains/auth/: auth.controller.go  auth.dto.go  auth.service.go
joinlegends-backend/internal/domains/organization/: organization.go
joinlegends-backend/internal/domains/stream/: stream.go
joinlegends-backend/internal/domains/upload/: upload.go
joinlegends-backend/internal/infrastructure/database/: database.go  schema.go
joinlegends-backend/internal/infrastructure/factory/: factory.go
joinlegends-backend/internal/infrastructure/redisclient/: messages.go  producer.go  queues.go  redisclient.go
joinlegends-backend/internal/models/: models.go
joinlegends-backend/internal/utilities/config/: config.go
joinlegends-backend/internal/utilities/jwt/: jwt.go
joinlegends-backend/internal/utilities/logger/: logger.go
joinlegends-backend/internal/utilities/mail/: mail.go
joinlegends-frontend/: README.md  package-lock.json  package.json
joinlegends-frontend/app/: globals.css  layout.tsx  page.tsx
joinlegends-frontend/app/auth/cadastro/: page.tsx
joinlegends-frontend/app/mock/: xtreinos.ts
joinlegends-frontend/app/xtreinos/: page.tsx
joinlegends-html-tests/: index.html  websocket.html
joinlegends-worker/: .gitignore  Cargo.toml
joinlegends-worker/src/: mail.rs  main.rs  processor.rs
kubb/: client.ts  kubb.config.ts
(+20 files in other folders)
